--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "@distube/soundcloud": "^1.2.1",
         "@distube/spotify": "^1.3.2",
         "@distube/yt-dlp": "^1.1.3",
-        "discord.js": "^14.1.2",
+        "@distube/ytdl-core": "^4.11.4",
+        "discord.js": "^14.2.0",
         "distube": "^4.0.3",
         "dotenv": "^16.0.1",
         "ffmpeg-static": "^5.0.2",
