--- a/package.json
+++ b/package.json
@@ -15,23 +15,23 @@
     "dependencies": {
         "@discordjs/opus": "^0.8.0",
         "@discordjs/voice": "^0.11.0",
-        "@distube/soundcloud": "^1.2.1",
-        "@distube/spotify": "^1.3.2",
+        "@distube/soundcloud": "^1.2.2",
+        "@distube/spotify": "^1.4.2",
         "@distube/yt-dlp": "^1.1.3",
         "@distube/ytdl-core": "^4.11.4",
         "discord.js": "^14.3.0",
         "distube": "^4.0.3",
-        "dotenv": "^16.0.1",
-        "ffmpeg-static": "^5.0.2",
+        "dotenv": "^16.0.2",
+        "ffmpeg-static": "^5.1.0",
         "glob-promise": "^4.2.2",
         "humanize-duration-ts": "^2.1.1",
         "libsodium-wrappers": "^0.7.10",
-        "string-similarity": "^4.0.4"
+        "string-similarity": "^4.0.4",
+        "typescript": "^4.8.3"
     },
     "devDependencies": {
         "@types/string-similarity": "^4.0.0",
         "nodemon": "^2.0.19",
-        "ts-node": "^10.9.1",
-        "typescript": "^4.7.4"
+        "ts-node": "^10.9.1"
     }
 }
