--- a/package.json
+++ b/package.json
@@ -16,19 +16,21 @@
         "@discordjs/opus": "^0.9.0",
         "@discordjs/voice": "^0.14.0",
         "@distube/soundcloud": "^1.3.0",
-        "@distube/spotify": "^1.4.2",
+        "@distube/spotify": "^1.5.1",
         "@distube/yt-dlp": "^1.1.3",
         "@distube/ytdl-core": "^4.11.7",
         "discord.js": "^14.7.1",
         "distube": "^4.0.4",
         "dotenv": "^16.0.3",
-        "glob-promise": "^4.2.2",
+        "glob": "^8.1.0",
+        "glob-promise": "^6.0.2",
         "humanize-duration-ts": "^2.1.1",
         "libsodium-wrappers": "^0.7.10",
         "string-similarity": "^4.0.4",
-        "typescript": "^4.9.3"
+        "typescript": "^4.9.4"
     },
     "devDependencies": {
+        "@types/glob": "^8.0.1",
         "@types/string-similarity": "^4.0.0",
         "nodemon": "^2.0.20",
         "ts-node": "^10.9.1"
