--- a/package.json
+++ b/package.json
@@ -14,23 +14,27 @@
     "keywords": [],
     "dependencies": {
         "@discordjs/opus": "^0.9.0",
-        "@discordjs/voice": "^0.16.1",
-        "@distube/soundcloud": "^1.3.3",
-        "@distube/spotify": "^1.5.2",
-        "@distube/yt-dlp": "^1.1.3",
-        "@distube/ytdl-core": "^4.13.3",
-        "discord.js": "^14.14.1",
-        "distube": "^4.1.1",
-        "dotenv": "^16.3.1",
+        "@discordjs/voice": "^0.17.0",
+        "@distube/soundcloud": "^2.0.3",
+        "@distube/spotify": "^2.0.2",
+        "@distube/youtube": "^1.0.2",
+        "@distube/yt-dlp": "^2.0.1",
+        "@distube/ytdl-core": "^4.13.5",
+        "discord.js": "^14.15.3",
+        "distube": "^5.0.2",
+        "dotenv": "^16.4.5",
         "glob": "^8.1.0",
-        "glob-promise": "^6.0.5",
+        "glob-promise": "^6.0.7",
         "humanize-duration-ts": "^2.1.1",
-        "libsodium-wrappers": "^0.7.13",
+        "ms": "^2.1.3",
+        "sodium-native": "^4.1.1",
         "string-similarity": "^4.0.4",
-        "typescript": "^5.3.3"
+        "typescript": "^5.5.4"
     },
     "devDependencies": {
+        "@biomejs/biome": "^1.8.3",
         "@types/glob": "^8.1.0",
+        "@types/ms": "^0.7.34",
         "@types/string-similarity": "^4.0.2",
         "nodemon": "^3.0.2",
         "ts-node": "^10.9.2"
