--- a/package.json
+++ b/package.json
@@ -15,26 +15,27 @@
 	"dependencies": {
 		"@discordjs/opus": "^0.9.0",
 		"@discordjs/voice": "^0.17.0",
-		"@distube/soundcloud": "^2.0.3",
+		"@distube/soundcloud": "^2.0.4",
 		"@distube/spotify": "^2.0.2",
 		"@distube/youtube": "^1.0.4",
-		"discord.js": "^14.16.1",
-		"distube": "^5.0.2",
+		"@distube/ytdl-core": "^4.15.1",
+		"discord.js": "^14.16.3",
+		"distube": "^5.0.4",
 		"dotenv": "^16.4.5",
 		"glob": "^8.1.0",
 		"glob-promise": "^6.0.7",
 		"humanize-duration-ts": "^2.1.1",
 		"ms": "^2.1.3",
-		"sodium-native": "^4.1.1",
+		"sodium-native": "^4.2.1",
 		"string-similarity": "^4.0.4",
-		"typescript": "^5.5.4"
+		"typescript": "^5.6.3"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^1.8.3",
+		"@biomejs/biome": "^1.9.4",
 		"@types/glob": "^8.1.0",
 		"@types/ms": "^0.7.34",
 		"@types/string-similarity": "^4.0.2",
-		"nodemon": "^3.0.2",
+		"nodemon": "^3.1.7",
 		"ts-node": "^10.9.2"
 	}
 }
